--- a/house.gov.by/bba2b399edfbdd7001d27d69129864633c2b0114.yml
+++ b/house.gov.by/bba2b399edfbdd7001d27d69129864633c2b0114.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 05 Nov 2017 16:01:06 GMT
+    - Sun, 05 Nov 2017 17:54:13 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=h7i68ebk36fk18hv6lvknarc92; path=/
+    - PHPSESSID=247gik7bm3pn1mko48fsfornv7; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 05 Nov 2017 16:01:08 GMT
+recorded_at: Sun, 05 Nov 2017 17:54:14 GMT
