--- a/house.gov.by/1c56df78afc242b33365e5c9f91904498272fecd.yml
+++ b/house.gov.by/1c56df78afc242b33365e5c9f91904498272fecd.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 05 Nov 2017 15:05:22 GMT
+    - Sun, 05 Nov 2017 18:02:59 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=oesgn6uvde828orlh5i1vslki4; path=/
+    - PHPSESSID=31i4modevc043ogod5ovdsndk0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 05 Nov 2017 15:05:23 GMT
+recorded_at: Sun, 05 Nov 2017 18:03:00 GMT
