--- a/house.gov.by/f858a9aae2501fc55b9f062aceead02c97dfa301.yml
+++ b/house.gov.by/f858a9aae2501fc55b9f062aceead02c97dfa301.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 05 Nov 2017 14:47:17 GMT
+    - Sun, 05 Nov 2017 18:04:18 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=q2e6h2ol780s2fjmu52e8u8110; path=/
+    - PHPSESSID=v379fbt7gjlp3jfv9r7copuvb4; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 05 Nov 2017 14:47:18 GMT
+recorded_at: Sun, 05 Nov 2017 18:04:18 GMT
