--- a/house.gov.by/bb638de07eb37a6a331149842af102c46009e290.yml
+++ b/house.gov.by/bb638de07eb37a6a331149842af102c46009e290.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 05 Nov 2017 15:48:32 GMT
+    - Sun, 05 Nov 2017 18:11:20 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=8vep60b0scqjok7argbhvklpu3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - UPDATING
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 05 Nov 2017 15:48:33 GMT
+recorded_at: Sun, 05 Nov 2017 18:11:20 GMT
