--- a/house.gov.by/ad5699a85dda4bc170ae62bd42a4a439ac006a13.yml
+++ b/house.gov.by/ad5699a85dda4bc170ae62bd42a4a439ac006a13.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 05 Nov 2017 17:34:31 GMT
+    - Mon, 06 Nov 2017 20:08:12 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=939uo6gesism4sqbd1ftg3d9j2; path=/
+    - PHPSESSID=79mi4ug4tbfs6kfgh5bra85196; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 05 Nov 2017 17:34:32 GMT
+recorded_at: Mon, 06 Nov 2017 20:08:12 GMT
