--- a/house.gov.by/3d07e35244747efde8f8b9a3aa7e65d29bf715ed.yml
+++ b/house.gov.by/3d07e35244747efde8f8b9a3aa7e65d29bf715ed.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 05 Nov 2017 16:52:04 GMT
+    - Mon, 06 Nov 2017 20:21:45 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=25e49h916ddnhcl9tgsccn4841; path=/
+    - PHPSESSID=l3889ojlejr0k5he50ki10j5l5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 05 Nov 2017 16:52:06 GMT
+recorded_at: Mon, 06 Nov 2017 20:21:46 GMT
