--- a/house.gov.by/0db15682979f7aca8a3ef53708295e151e7e663b.yml
+++ b/house.gov.by/0db15682979f7aca8a3ef53708295e151e7e663b.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 05 Nov 2017 16:57:16 GMT
+    - Mon, 06 Nov 2017 20:29:40 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=iu8ks13jdt7rjs9h8gmnpg0l26; path=/
+    - PHPSESSID=22js2egoplpddniedlao9orp14; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 05 Nov 2017 16:57:17 GMT
+recorded_at: Mon, 06 Nov 2017 20:29:41 GMT
