--- a/house.gov.by/bb638de07eb37a6a331149842af102c46009e290.yml
+++ b/house.gov.by/bb638de07eb37a6a331149842af102c46009e290.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 05 Nov 2017 18:11:20 GMT
+    - Mon, 06 Nov 2017 20:33:05 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=pb4623kv9uveip7m96rsb4dl44; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - UPDATING
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 05 Nov 2017 18:11:20 GMT
+recorded_at: Mon, 06 Nov 2017 20:33:06 GMT
