--- a/house.gov.by/3e8a0bc757ed9f6cd82435b8a06b033244a79ee4.yml
+++ b/house.gov.by/3e8a0bc757ed9f6cd82435b8a06b033244a79ee4.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 05 Nov 2017 16:51:21 GMT
+    - Mon, 06 Nov 2017 20:40:28 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=tq09ne5kpb6hh5h2tcgphse5b5; path=/
+    - PHPSESSID=mrqnmkkousipahr1jhfvsq8md5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 05 Nov 2017 16:51:22 GMT
+recorded_at: Mon, 06 Nov 2017 20:40:29 GMT
