--- a/house.gov.by/1fb00ecebacfe149b89cb2bcda4bc3b123d0d075.yml
+++ b/house.gov.by/1fb00ecebacfe149b89cb2bcda4bc3b123d0d075.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 05 Nov 2017 17:20:53 GMT
+    - Mon, 06 Nov 2017 20:41:26 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=cdnne9ss4odan353e48u3v5rl1; path=/
+    - PHPSESSID=eqtoh3lj4ls08prkl06tihnis3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 05 Nov 2017 17:20:54 GMT
+recorded_at: Mon, 06 Nov 2017 20:41:27 GMT
