--- a/house.gov.by/24bc65cba9257ede0d18534acfb8be7cd6e47929.yml
+++ b/house.gov.by/24bc65cba9257ede0d18534acfb8be7cd6e47929.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 05 Nov 2017 16:35:29 GMT
+    - Mon, 06 Nov 2017 20:59:03 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=112ves6hqjcp1m3jeobvv05bu1; path=/
+    - PHPSESSID=hfo3ivdbpbojijmaev6hmtten3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 05 Nov 2017 16:35:30 GMT
+recorded_at: Mon, 06 Nov 2017 20:59:03 GMT
