--- a/house.gov.by/22695d2f418a8e9154938c2b12025487ab02d296.yml
+++ b/house.gov.by/22695d2f418a8e9154938c2b12025487ab02d296.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 05 Nov 2017 17:16:50 GMT
+    - Mon, 06 Nov 2017 21:02:52 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=pn850tk6gtie9ep7lr628ji007; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 05 Nov 2017 17:16:50 GMT
+recorded_at: Mon, 06 Nov 2017 21:02:53 GMT
