--- a/house.gov.by/6049a06ec51e0138b28b10654e9a14ef429857c6.yml
+++ b/house.gov.by/6049a06ec51e0138b28b10654e9a14ef429857c6.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 05 Nov 2017 16:38:40 GMT
+    - Mon, 06 Nov 2017 21:04:56 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=iv51m7766mrrlhaf514biufvu4; path=/
+    - PHPSESSID=htcrambf0rhkkg3n1007kl49i7; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 05 Nov 2017 16:38:41 GMT
+recorded_at: Mon, 06 Nov 2017 21:04:57 GMT
