--- a/house.gov.by/ee05aa364c6bfd50c59a9f3f647df095bd14d75c.yml
+++ b/house.gov.by/ee05aa364c6bfd50c59a9f3f647df095bd14d75c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 05 Nov 2017 17:52:13 GMT
+    - Mon, 06 Nov 2017 21:08:40 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=jht92rhq5v3hv6m2c6an3gh8h1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 05 Nov 2017 17:52:13 GMT
+recorded_at: Mon, 06 Nov 2017 21:08:41 GMT
