--- a/house.gov.by/d75a0ec939d96097bb357b02dd11935e38450948.yml
+++ b/house.gov.by/d75a0ec939d96097bb357b02dd11935e38450948.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 05 Nov 2017 17:52:44 GMT
+    - Mon, 06 Nov 2017 21:11:44 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=2tc4nvi7ndk6ba741fsjkqho84; path=/
+    - PHPSESSID=pjvi00uhp5me6cdg6ojo3s6kd5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 05 Nov 2017 17:52:44 GMT
+recorded_at: Mon, 06 Nov 2017 21:11:45 GMT
