--- a/house.gov.by/0f95b7f2059a5363c756684287725e57d866f43a.yml
+++ b/house.gov.by/0f95b7f2059a5363c756684287725e57d866f43a.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 05 Nov 2017 17:56:58 GMT
+    - Mon, 06 Nov 2017 21:17:29 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=r9sv1ol1l589dqs9qabj0jkqt7; path=/
+    - PHPSESSID=126si8akdvib1gh4ag0s4ueo86; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 05 Nov 2017 17:56:59 GMT
+recorded_at: Mon, 06 Nov 2017 21:17:31 GMT
