--- a/house.gov.by/9d5d8b1cd29a0fe86cc845c172ed4fd7c7d2cd29.yml
+++ b/house.gov.by/9d5d8b1cd29a0fe86cc845c172ed4fd7c7d2cd29.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 06 Nov 2017 21:34:59 GMT
+    - Mon, 06 Nov 2017 21:54:24 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=89dlc4msvsh20ovf1km47remj6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 06 Nov 2017 21:35:00 GMT
+recorded_at: Mon, 06 Nov 2017 21:54:24 GMT
