--- a/house.gov.by/3e8a0bc757ed9f6cd82435b8a06b033244a79ee4.yml
+++ b/house.gov.by/3e8a0bc757ed9f6cd82435b8a06b033244a79ee4.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 06 Nov 2017 20:40:28 GMT
+    - Mon, 06 Nov 2017 21:55:39 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=mrqnmkkousipahr1jhfvsq8md5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - UPDATING
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 06 Nov 2017 20:40:29 GMT
+recorded_at: Mon, 06 Nov 2017 21:55:40 GMT
