--- a/house.gov.by/f858a9aae2501fc55b9f062aceead02c97dfa301.yml
+++ b/house.gov.by/f858a9aae2501fc55b9f062aceead02c97dfa301.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 06 Nov 2017 20:31:06 GMT
+    - Mon, 06 Nov 2017 21:56:08 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=nbj6geruh2pn5gp25bdfrgqv97; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - UPDATING
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 06 Nov 2017 20:31:07 GMT
+recorded_at: Mon, 06 Nov 2017 21:56:08 GMT
