--- a/house.gov.by/1a9765cc5d4cafefd5c57da3a6c44b7d48af7ee3.yml
+++ b/house.gov.by/1a9765cc5d4cafefd5c57da3a6c44b7d48af7ee3.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 06 Nov 2017 20:27:41 GMT
+    - Mon, 06 Nov 2017 21:57:23 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=3s6bhm1nsj18peg8p4c9v6ipj7; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 06 Nov 2017 20:27:42 GMT
+recorded_at: Mon, 06 Nov 2017 21:57:23 GMT
