--- a/house.gov.by/5c6c1df8deff67757e87013192ccd6b1f02ac39e.yml
+++ b/house.gov.by/5c6c1df8deff67757e87013192ccd6b1f02ac39e.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 06 Nov 2017 20:59:28 GMT
+    - Mon, 06 Nov 2017 22:07:01 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=uccn078aqanffs7e161orhbka3; path=/
+    - PHPSESSID=lfn5s2jivmcqgcv9bucbv6c2s4; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 06 Nov 2017 20:59:29 GMT
+recorded_at: Mon, 06 Nov 2017 22:07:02 GMT
