--- a/house.gov.by/ab08b5964a5f939d2ec57008fa64e725ae632711.yml
+++ b/house.gov.by/ab08b5964a5f939d2ec57008fa64e725ae632711.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 06 Nov 2017 20:05:51 GMT
+    - Tue, 07 Nov 2017 20:49:05 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=0edut3btl8cnbbp1a29ef6a606; path=/
+    - PHPSESSID=n11tif67bm7ebphmkqnl0e5g76; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 06 Nov 2017 20:05:52 GMT
+recorded_at: Tue, 07 Nov 2017 20:49:06 GMT
