--- a/house.gov.by/7f75d2d1e80e6aa5f8fe0e4e78721b8f4b7d2d4e.yml
+++ b/house.gov.by/7f75d2d1e80e6aa5f8fe0e4e78721b8f4b7d2d4e.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 06 Nov 2017 20:14:40 GMT
+    - Tue, 07 Nov 2017 20:59:24 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=bv331dvfraab7kg7s3i3mrkhb7; path=/
+    - PHPSESSID=p6mk8bqa3pfvuc8ke5p613u965; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 06 Nov 2017 20:14:40 GMT
+recorded_at: Tue, 07 Nov 2017 20:59:25 GMT
