--- a/house.gov.by/778d300db4f1c8e9b4c35629d5885371d02152a7.yml
+++ b/house.gov.by/778d300db4f1c8e9b4c35629d5885371d02152a7.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 06 Nov 2017 20:16:01 GMT
+    - Tue, 07 Nov 2017 21:00:00 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=97kuifcajtcco1mkejb2jm6f61; path=/
+    - PHPSESSID=git6dmspg39e0fnpbd77fckso4; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 06 Nov 2017 20:16:02 GMT
+recorded_at: Tue, 07 Nov 2017 21:00:01 GMT
