--- a/house.gov.by/0db15682979f7aca8a3ef53708295e151e7e663b.yml
+++ b/house.gov.by/0db15682979f7aca8a3ef53708295e151e7e663b.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 06 Nov 2017 20:29:40 GMT
+    - Tue, 07 Nov 2017 21:14:09 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=22js2egoplpddniedlao9orp14; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 06 Nov 2017 20:29:41 GMT
+recorded_at: Tue, 07 Nov 2017 21:14:09 GMT
