--- a/house.gov.by/7e9f66ca0cfc9e80efc44ab0f3443c074abd860d.yml
+++ b/house.gov.by/7e9f66ca0cfc9e80efc44ab0f3443c074abd860d.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 06 Nov 2017 20:31:34 GMT
+    - Tue, 07 Nov 2017 21:16:08 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=5ntmibu114sjji6lqt71opjk87; path=/
+    - PHPSESSID=i8165r345vmbeolhgngmo5m515; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 06 Nov 2017 20:31:35 GMT
+recorded_at: Tue, 07 Nov 2017 21:16:09 GMT
